deploy/gcp/gke-autopilot/storedog/advertisements.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tags.datadoghq.com/env: development
    tags.datadoghq.com/service: advertisements
    app: ecommerce
  name: advertisements
spec:
  replicas: 1
  selector:
    matchLabels:
      tags.datadoghq.com/env: development
      tags.datadoghq.com/service: advertisements
      app: ecommerce
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        tags.datadoghq.com/env: development
        tags.datadoghq.com/service: advertisements
        app: ecommerce
    spec:
      containers:
      - image: ddtraining/advertisements-service:latest 
        name: advertisements
        command: ["ddtrace-run"]
        args: ["flask", "run", "--port=5002", "--host=0.0.0.0"]
        ports:
        - containerPort: 5002
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    tags.datadoghq.com/service: advertisements
    tags.datadoghq.com/env: development
    app: ecommerce
  name: advertisements
spec:
  ports:
  - port: 5002
    protocol: TCP
    targetPort: 5002
  selector:
    tags.datadoghq.com/service: advertisements
    tags.datadoghq.com/env: development
    app: ecommerce
status:
